[package]
name = "rustql"
version = "0.1.0"
authors = ["aleics <aleics.casanovas@gmail.com>"]

[dependencies]
juniper = "0.9.0"
uuid = "0.6"
serde = "1.0.67"
serde_derive = "1.0.67"
serde_json = "1.0.22"
postgres = "0.15"
r2d2_postgres = "0.14.0"
r2d2 = "0.8.2"
rocket = "0.3.14"
rocket_codegen = "0.3.14"