[package]
name = "rustql"
version = "0.1.0"
authors = ["aleics <aleics.casanovas@gmail.com>"]

[dependencies]
juniper = "0.9.0"
uuid = { version = "0.6", features = ["v5"] }
serde = "1.0.67"
serde_derive = "1.0.67"
serde_json = "1.0.22"
diesel = { version = "1.0.0", features = ["postgres"] }
rocket = "0.3.14"
rocket_codegen = "0.3.14"